# Perigord

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  cmgl.cppcheck  tempMain.txt
cmgl-cppcheck-build-dir/: CMakeCCompilerId.s1  CMakeCXXCompilerId.s1  IndexBuffer.a1  IndexBuffer.s1  Main.a1  OpenGL.a1  OpenGL.s1  Shader.a1  Shader.s1  VertexArray.a1  VertexArray.s1  VertexBuffer.a1  VertexBuffer.s1  files.txt  getopt.s1  glad_gl.s1  glad_vulkan.s1  glew.s1  glew_head.s1  glew_init_tail.s1  glewinfo.s1  glewinfo_head.s1  lastResults.xml  main.s2  statistics.txt  stub.s1  visualinfo.s1
resources/: test.frag  test.vert
src/: CMakeLists.txt  Graphics.cpp  Graphics.h  text.cpp  text.h
src/Renderer/OpenGL/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
